ffi/poc/codec/crates/ak-abi/src/generated_nounk/abi.rs


/// Decode group for `ListTaskSummaryResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListTaskSummaryResponse {
    pub presence: u32,
}
impl ak_dfix_ListTaskSummaryResponse {
    pub const ZERO: Self = ak_dfix_ListTaskSummaryResponse {
        presence: 0,
    };
}

/// Encode group for `ListProbeResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListProbeResponse {
    pub presence: u32,
}
impl ak_efix_ListProbeResponse {
    pub const ZERO: Self = ak_efix_ListProbeResponse {
        presence: 0,
    };
}

/// Decode group for `ListProbeResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListProbeResponse {
    pub presence: u32,
}
impl ak_dfix_ListProbeResponse {
    pub const ZERO: Self = ak_dfix_ListProbeResponse {
        presence: 0,
    };
}

/// Encode group for `ListMetricsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListMetricsResponse {
    pub presence: u32,
}
impl ak_efix_ListMetricsResponse {
    pub const ZERO: Self = ak_efix_ListMetricsResponse {
        presence: 0,
    };
}

/// Decode group for `ListMetricsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListMetricsResponse {
    pub presence: u32,
}
impl ak_dfix_ListMetricsResponse {
    pub const ZERO: Self = ak_dfix_ListMetricsResponse {
        presence: 0,
    };
}

/// Encode group for `UploadResultDataMessage`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_UploadResultDataMessage {
    pub upload: ak_efix_UploadResultData,
    pub presence: u32,
}
impl ak_efix_UploadResultDataMessage {
    pub const ZERO: Self = ak_efix_UploadResultDataMessage {
        upload: ak_efix_UploadResultData::ZERO,
        presence: 0,
    };
}
pub const AK_EFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD: u32 = 1 << 0;

/// Decode group for `UploadResultDataMessage`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_UploadResultDataMessage {
    pub upload: ak_dfix_UploadResultData,
    pub presence: u32,
}
impl ak_dfix_UploadResultDataMessage {
    pub const ZERO: Self = ak_dfix_UploadResultDataMessage {
        upload: ak_dfix_UploadResultData::ZERO,
        presence: 0,
    };
}
pub const AK_DFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD: u32 = 1 << 0;

/// Encode group for `DualResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_DualResponse {
    pub presence: u32,
}
impl ak_efix_DualResponse {
    pub const ZERO: Self = ak_efix_DualResponse {
        presence: 0,
    };
}

/// Decode group for `DualResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_DualResponse {
    pub presence: u32,
}
impl ak_dfix_DualResponse {
    pub const ZERO: Self = ak_dfix_DualResponse {
        presence: 0,
    };
}

/// Encode vtable for `ListResultsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListResultsResponse {
    pub loop_results: Option<ak_loop_f>,
}

/// Decode vtable for `ListResultsResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListResultsResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListResultsResponse),
    >,
    pub add_results: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ResultRaw, i32),
    >,
}

/// Encode vtable for `ListTasksDetailedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListTasksDetailedResponse {
    pub loop_tasks: Option<ak_loop_f>,
    /// The element type has loop slots of its own (ABI v1 section 6).
    pub elem_tasks: *const ak_evt_TaskDetailed,
}

/// Decode vtable for `ListTasksDetailedResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListTasksDetailedResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListTasksDetailedResponse),
    >,
    pub new_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void) -> i64,
    >,
    pub apply_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskDetailed),
    >,
    pub add_tasks_parent_task_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_data_dependencies: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_expected_output_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_retry_of_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `ListProbeResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListProbeResponse {
    pub loop_probes: Option<ak_loop_f>,
}

/// Decode vtable for `ListProbeResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListProbeResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListProbeResponse),
    >,
    pub add_probes: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_Probe, i32),
    >,
}

/// Encode vtable for `ListTaskSummaryResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListTaskSummaryResponse {
    pub loop_tasks: Option<ak_loop_f>,
    /// The element type has loop slots of its own (ABI v1 section 6).
    pub elem_tasks: *const ak_evt_TaskSummary,
}

/// Decode vtable for `ListTaskSummaryResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListTaskSummaryResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListTaskSummaryResponse),
    >,
    pub new_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void) -> i64,
    >,
    pub apply_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskSummary),
    >,
    pub add_tasks_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `UploadResultDataMessage`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_UploadResultDataMessage {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `UploadResultDataMessage` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_UploadResultDataMessage {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_UploadResultDataMessage),
    >,
}

/// Encode vtable for `ListMetricsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListMetricsResponse {
    pub loop_batches: Option<ak_loop_f>,
    /// The element type has loop slots of its own (ABI v1 section 6).
    pub elem_batches: *const ak_evt_MetricsBatch,
}

/// Decode vtable for `ListMetricsResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListMetricsResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListMetricsResponse),
    >,
    pub new_batches: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void) -> i64,
    >,
    pub apply_batches: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_MetricsBatch),
    >,
    pub add_batches_ticks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i64, i32),
    >,
    pub add_batches_values: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const f64, i32),
    >,
    pub add_batches_codes: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i32, i32),
    >,
    pub add_batches_flags: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const u8, i32),
    >,
    pub add_batches_statuses: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i32, i32),
    >,
}

/// Encode vtable for `DualResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_DualResponse {
    pub loop_left: Option<ak_loop_f>,
    pub loop_right: Option<ak_loop_f>,
}

/// Decode vtable for `DualResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_DualResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_DualResponse),
    >,
    pub add_left: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_Pair, i32),
    >,
    pub add_right: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_Pair, i32),
    >,
}

/// Encode vtable for `TaskOptionsOptionsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskOptionsOptionsEntry {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `TaskOptionsOptionsEntry` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskOptionsOptionsEntry {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskOptionsOptionsEntry),
    >,
}

/// Encode vtable for `ResultRaw`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ResultRaw {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `ResultRaw` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ResultRaw {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ResultRaw),
    >,
}

/// Encode vtable for `TaskDetailed`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskDetailed {
    pub loop_parent_task_ids: Option<ak_loop_f>,
    pub loop_data_dependencies: Option<ak_loop_f>,
    pub loop_expected_output_ids: Option<ak_loop_f>,
    pub loop_retry_of_ids: Option<ak_loop_f>,
    pub loop_options_options: Option<ak_loop_f>,
}

/// Decode vtable for `TaskDetailed` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskDetailed {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskDetailed),
    >,
    pub add_parent_task_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_data_dependencies: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_expected_output_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_retry_of_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `TaskSummary`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskSummary {
    pub loop_options_options: Option<ak_loop_f>,
}

/// Decode vtable for `TaskSummary` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskSummary {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskSummary),
    >,
    pub add_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}
